# seek-and-destroy

./: .gitignore  .gitmodules  .pip_freeze.txt  README.md  a.ipynb  harmful_eval.py  play.py  pyproject.toml  requirements.txt  retrain.py  utils.py
archive/: .continue_old_run.py  2_one_hit.py  _circit_cossim_eval.py  baseline_runner_with_lora.py  circuit_decay_dump.py  dump.py  grad_misalignment.py  notes.md  param_search.py  perturbations.py  quiet_normal.py  seek_and_destroy_simple.py  seek_and_destroy_with_ret_lora.py  seek_and_destroy_without_lora.py  selective_revert.py  stats.py  undynamically_masked_aa.py  unused_utils.py  wmdp_eval_runner.py  working_aa.py
circuit_breakers/: a.ipynb  train_cb_llama3_8b.ipynb  train_cb_pythia_14m.ipynb
configs/: ablations_and_loss,llama32,pile-bio.yaml  ablations_and_loss,llama32,python.yaml  ablations_and_loss,pythia,pile-bio.yaml  ablations_and_loss,pythia,python.yaml  ablations_and_loss,smol,pile-bio.yaml  ablations_and_loss,smol,python.yaml  ablations_and_loss2,llama32,pile-bio.yaml  ablations_and_loss2,llama32,python.yaml  ablations_and_loss2,pythia,pile-bio.yaml  ablations_and_loss2,pythia,python.yaml  ablations_and_loss2,smol,pile-bio.yaml  ablations_and_loss2,smol,python.yaml  config.yaml  pythia_ablation.yaml  pythia_ablation2.yaml  pythia_ablation3.yaml  pythia_normalization_test.yaml  pythia_python.yaml  pythia_target_modules.yaml  smol_cruelty.yaml  smol_cruelty2.yaml  smol_cruelty3.yaml  smol_target_modules.yaml  smol_target_modules2.yaml  smol_target_modules3.yaml  smol_target_modules_cruelty.yaml  wmdp.yaml  (+1 more)
(+117 files in other folders)
